Mon Nov 25 12:48:31 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Cleanups to release, mostly cosmetic:
	* release.c (release_server): New function; breaks out server code
	from the release function.
	* release.c: Move delete_flag inside the release function.
	* release.c (release): Reindent.  Rewrite comments about how the
	implementation could be improved.  Don't declare variables as
	"register".  Include errno in error message.  Don't cast result of
	printf to void.  Remove unused variable srepos.
	* release.c: Remove comments at top of file about what it does.
	They were not particularly coherent and they were also out of date
	(I think).  Likewise for comment in release function about "if we
	are in a repository".
	* release.c: Change "module" to "directory" in a few messages
	since that is what is meant.
	* sanity.sh: In tests ignore-195 and ignore-193, change expected
	message accordingly.

Sun Nov 24 11:30:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Clarify a few items in the todo list.

	* log.c (log_parse_date): Use the "end" of the epoch not "next
	week" as the time which means "no end time".
	* sanity.sh (rcs): New test, tests dates and importing RCS files.

1996-11-19  Jim Kingdon

	Visual C++ lint:
	* hash.c: Declare qsort_comp.
	* update.c: Declare isremoved.
	
1996-11-19  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* root.c, repos.c, modules.c, create_adm.c: Change all calls to
	strip_path to strip_trailing_slashes.  Basically strip_path is
	just an unneeded complication (we should keep the pathname the way
	the user specifies it, and the system can worry about things like
	consecutive /'s if it wants to).  Stripping trailing slashes is
	potentially dubious for the same reason, but it is a somewhat
	different case which I won't try to tackle now.
	* cvs.h (strip_path): Remove declaration.

Tue Nov 19 15:18:13 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	There are a lot of details to this change, but the concept is